--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Recriando-interface-da-Netflix/style/main.css">
+
+    <!--Responsividade-->
+    <link rel="stylesheet" href="style/responsive.css">
+
+    <!--owl css-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+
     <title>Netflix</title>
 </head>
 <body>
@@ -27,15 +35,60 @@
                 <p class="descricao">Frank Underwood é um astuto congressista norte-americano que é traído pelo presidente que ele ajudou a eleger. Com a ajuda da esposa, de uma jornalista ambiciosa e de um outro político com problemas com alcoolismo, Underwood inicia um plano para minar adversários políticos e conquistar, em alguns anos, a presidência dos Estados Unidos.</p>
                 <div>
                     <button role="button" class="botao">
-                    Assistir agora
+                        <i class="fas fa-play"></i>
+                        ASSISTIR AGORA
                     </button>
                     <button role="button" class="botao">
-                    Mais Informações
+                        <i class="fas fa-info-circle"></i>
+                        MAIS INFORMAÇÕES
                     </button>
                 </div>
             </div>
         </div>
     </main>
+
+
+    <div class="carrosel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/mini1.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini2.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini3.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini4.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini5.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini6.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini7.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini8.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini9.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini10.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://kit.fontawesome.com/60424ee1bb.js"></script> 
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
+
 
 
     <footer></footer>
